[gd_scene load_steps=8 format=4 uid="uid://m6yminfgoutv"]

[ext_resource type="TileSet" uid="uid://dvjhldmeg56tb" path="res://assets/sprites/props/caves_props.tres" id="1_r7qys"]
[ext_resource type="PackedScene" uid="uid://bmmud7hhjo011" path="res://scenes/levels/parallax.tscn" id="1_xbibw"]
[ext_resource type="PackedScene" uid="uid://0c86sankb0mq" path="res://scenes/player.tscn" id="2_hkalp"]
[ext_resource type="PackedScene" uid="uid://cngb5x8dbqg8t" path="res://scenes/camera_2d.tscn" id="3_hkalp"]
[ext_resource type="PackedScene" uid="uid://etbuf7okww7r" path="res://scenes/save_point.tscn" id="3_qhf3p"]
[ext_resource type="Script" uid="uid://c4njxeu6115ny" path="res://scripts/levels/FirstLevel.gd" id="3_xbibw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qhf3p"]
size = Vector2(50, 134)

[node name="first_level" type="Node2D"]
script = ExtResource("3_xbibw")

[node name="parallax" parent="." instance=ExtResource("1_xbibw")]

[node name="save_point" parent="." instance=ExtResource("3_qhf3p")]
position = Vector2(549, 156)

[node name="map" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAA8AAwAPABYAAAAAABAAAwAPABcAAAAEAA8AAwAOABYAAAAEABAAAwAOABcAAAAEABEAAwAOABgAAAAFAA8AAwAPABYAAAAFABAAAwAPABcAAAAFABEAAwAPABgAAAABAA8AAwARABYAAAABABAAAwARABcAAAABABEAAwARABgAAAACABAAAwATABcAAAACABEAAwATABgAAAADAA8AAwARABYAAAADABAAAwARABcAAAADABEAAwARABgAAAAGAA8AAwAYABYAAAAGABAAAwAYABcAAAAGABEAAwAYABgAAAAHAA8AAwAZABYAAAAHABAAAwAZABcAAAAHABEAAwAZABgAAAAAABEAAwAPABgAAAD//w8AAwARABYAAAD//xAAAwARABcAAAD//xEAAwARABgAAAD+/w8AAwAPABYAAAD+/xAAAwAPABcAAAD+/xEAAwAPABgAAAD9/w8AAwAOABYAAAD9/xAAAwAOABcAAAD9/xEAAwAOABgAAAD8/xAAAwAMABcAAAD8/xEAAwAMABgAAAD7/w4AAwAOABQAAAD7/w8AAwAOABUAAAD8/w4AAwAPABQAAAD8/w8AAwAPABUAAAD7/w0AAwAPABIAAAD8/w0AAwAQABIAAAD8/wsAAwAMABQAAAD8/wwAAwAMABUAAAD7/woAAwAPABIAAAD8/woAAwAQABIAAAD7/wkAAwAPABIAAAD8/wkAAwAQABIAAAD7/wgAAwAPABIAAAD8/wgAAwAQABIAAAD7/wsAAwAMACEAAAD7/wwAAwACAAIAAAD9/wYAAwACAAUAAAD9/wcAAwACAAYAAAD9/wgAAwACAAcAAAD+/wYAAwADAAUAAAD+/wcAAwADAAYAAAD+/wgAAwADAAcAAAD//wYAAwAFAAYAAAD//wcAAwAFAAcAAAAAAAYAAwAGAAYAAAAAAAcAAwAGAAcAAAAAAAUAAwAMAAYAAAABAAQAAwARAAYAAAABAAUAAwARAAcAAAACAAQAAwAOAAYAAAACAAUAAwAOAAcAAAACAAYAAwAOAAgAAAADAAQAAwAPAAYAAAADAAUAAwAPAAcAAAADAAYAAwAPAAgAAAAEAAQAAwATAAYAAAAEAAUAAwATAAcAAAAFAAQAAwAUAAYAAAAFAAUAAwAUAAcAAAAGAAQAAwAYAAYAAAAGAAUAAwAYAAcAAAAHAAQAAwAWAAYAAAAHAAUAAwAWAAcAAAAHAAYAAwAWAAgAAAAIAAQAAwAaAAYAAAAIAAUAAwAaAAcAAAAJAAQAAwAbAAYAAAAJAAUAAwAbAAcAAAAKAAYAAwAgAAYAAAAKAAcAAwAgAAcAAAALAAUAAwARAAYAAAALAAYAAwARAAcAAAAMAAUAAwAOAAYAAAAMAAYAAwAOAAcAAAAMAAcAAwAOAAgAAAANAAUAAwAPAAYAAAANAAYAAwAPAAcAAAANAAcAAwAPAAgAAAAKAAUAAwAeAAYAAAAIABAAAwAIAAoAAAAIABEAAwAIAAsAAAAIABIAAwACAAIAAAAJABAAAwAJAAoAAAAJABEAAwAJAAsAAAAJABIAAwADAAIAAAAKABAAAwAQAAoAAAAKABEAAwAQAAsAAAAKABIAAwAQAAwAAAALABEAAwARAAsAAAALABIAAwARAAwAAAALABMAAwAPABQAAAALABQAAwAPABUAAAALABUAAwAMABcAAAALABYAAwAMABgAAAALABcAAwACAAIAAAALABgAAwACAAMAAAALABkAAwACAAIAAAAJABMAAwADAAIAAAAJABQAAwADAAMAAAAKABMAAwAOABQAAAAKABQAAwAOABUAAAAJABUAAwAKAB8AAAAJABYAAwAKACAAAAAKABUAAwADAAIAAAAKABYAAwADAAMAAAAJABcAAwAKACEAAAAJABgAAwADAAMAAAAKABcAAwADAAIAAAAKABgAAwADAAMAAAAJABkAAwADAAIAAAAJABoAAwADAAMAAAAKABkAAwADAAIAAAAKABoAAwADAAMAAAD8/xIAAwACAAIAAAD8/xMAAwACAAMAAAD9/xIAAwADAAIAAAD9/xMAAwADAAMAAAD+/xIAAwACAAIAAAD+/xMAAwACAAMAAAD//xIAAwADAAIAAAD//xMAAwADAAMAAAAAABIAAwACAAIAAAAAABMAAwACAAMAAAABABIAAwADAAIAAAABABMAAwADAAMAAAACABIAAwACAAIAAAACABMAAwACAAMAAAADABIAAwADAAIAAAADABMAAwADAAMAAAAEABIAAwACAAIAAAAEABMAAwACAAMAAAAFABIAAwADAAIAAAAFABMAAwADAAMAAAAGABMAAwAMACEAAAAHABIAAwADAAIAAAAHABMAAwADAAMAAAAGABQAAwACAAIAAAAGABUAAwACAAMAAAAHABQAAwADAAIAAAAHABUAAwAIAB8AAAAIABMAAwACAAIAAAAIABQAAwACAAMAAAAIABUAAwAJAB8AAAAIABYAAwAJACAAAAD8/xQAAwACAAIAAAD8/xUAAwACAAMAAAD9/xQAAwADAAIAAAD9/xUAAwADAAMAAAD+/xQAAwACAAIAAAD+/xUAAwACAAMAAAD//xQAAwADAAIAAAD//xUAAwADAAMAAAAAABQAAwACAAIAAAAAABUAAwACAAMAAAABABQAAwALABwAAAABABUAAwALAB0AAAAAABYAAwACAAIAAAAAABcAAwACAAMAAAABABYAAwADAAIAAAABABcAAwADAAMAAAAAABgAAwACAAIAAAAAABkAAwADAAIAAAABABgAAwADAAIAAAABABkAAwACAAIAAAD+/xgAAwACAAIAAAD+/xkAAwAJAB8AAAD//xgAAwADAAIAAAD//xkAAwAKAB8AAAD+/xYAAwACAAIAAAD+/xcAAwACAAMAAAD//xYAAwADAAIAAAD//xcAAwADAAMAAAACABQAAwAMABwAAAACABUAAwAMAB0AAAADABQAAwANABwAAAADABUAAwANAB0AAAAEABQAAwACAAIAAAAEABUAAwAIABwAAAAFABQAAwADAAIAAAAFABUAAwAJABwAAAAEABYAAwAIAB0AAAAEABcAAwACAAMAAAAFABYAAwAJAB0AAAAFABcAAwADAAMAAAACABgAAwACAAIAAAACABkAAwADAAIAAAADABgAAwADAAIAAAADABkAAwACAAIAAAD8/xYAAwACAAIAAAD8/xcAAwACAAIAAAD9/xYAAwADAAIAAAD9/xcAAwADAAMAAAACABYAAwACAAIAAAACABcAAwACAAMAAAADABYAAwADAAIAAAADABcAAwADAAMAAAD8/xgAAwACAAIAAAD8/xkAAwACAAIAAAD9/xgAAwADAAIAAAD9/xkAAwAIAB8AAAAEABgAAwACAAIAAAAEABkAAwADAAIAAAAFABgAAwADAAIAAAAFABkAAwACAAIAAAAGABgAAwACAAIAAAAGABkAAwADAAIAAAAHABgAAwADAAIAAAAHABkAAwACAAIAAAAGABYAAwACAAIAAAAGABcAAwACAAMAAAAHABYAAwAIACAAAAAHABcAAwAIACEAAAAIABcAAwAJACEAAAAIABgAAwACAAMAAAAIABkAAwADAAIAAAAIABoAAwANAB8AAAAHABoAAwAMAB8AAAAFABoAAwACAAMAAAAGABoAAwADAAMAAAADABoAAwACAAMAAAAEABoAAwADAAMAAAABABoAAwACAAMAAAACABoAAwADAAMAAAD//xoAAwAKACAAAAAAABoAAwADAAMAAAD9/xoAAwAIACAAAAD+/xoAAwAJACAAAAD8/xoAAwACAAMAAAALABoAAwACAAMAAAAMABUAAwAYABcAAAAMABYAAwAYABgAAAANABUAAwAZABcAAAANABYAAwAZABgAAAAOABUAAwATABcAAAAOABYAAwATABgAAAAMABQAAwAYABYAAAANABQAAwAZABYAAAAPABQAAwAVABYAAAAPABUAAwAVABcAAAAPABYAAwAVABgAAAAQABQAAwAWABYAAAAQABUAAwAWABcAAAAQABYAAwAWABgAAAARABQAAwAbABYAAAARABUAAwAbABcAAAARABYAAwAbABgAAAASABQAAwAcABYAAAASABUAAwAcABcAAAASABYAAwAcABgAAAATABQAAwARABYAAAATABUAAwARABcAAAATABYAAwARABgAAAAUABUAAwATABcAAAAUABYAAwATABgAAAAMABcAAwADAAIAAAAMABgAAwADAAMAAAANABcAAwACAAIAAAANABgAAwACAAMAAAAOABcAAwADAAIAAAAOABgAAwADAAMAAAAPABcAAwACAAIAAAAPABgAAwACAAMAAAAQABcAAwADAAIAAAAQABgAAwADAAMAAAARABcAAwASAB8AAAARABgAAwASACAAAAASABcAAwADAAIAAAASABgAAwADAAMAAAATABcAAwACAAIAAAATABgAAwACAAMAAAAUABcAAwACAAIAAAAUABgAAwACAAMAAAATABkAAwAbABwAAAATABoAAwAbAB0AAAAUABkAAwACAAIAAAAUABoAAwACAAMAAAARABkAAwACAAIAAAARABoAAwACAAMAAAASABkAAwAaABwAAAASABoAAwAaAB0AAAAPABkAAwACAAIAAAAPABoAAwACAAMAAAAQABkAAwADAAIAAAAQABoAAwADAAMAAAANABkAAwACAAIAAAANABoAAwACAAMAAAAOABkAAwADAAIAAAAOABoAAwADAAMAAAAMABkAAwADAAIAAAAMABoAAwADAAMAAAAVABgAAwADAAMAAAAVABkAAwACAAMAAAAVABoAAwACAAMAAAD8/xsAAwACAAIAAAD8/xwAAwACAAMAAAD9/xsAAwAIACEAAAD9/xwAAwADAAMAAAD8/x0AAwACAAIAAAD8/x4AAwACAAMAAAD9/x0AAwADAAIAAAD9/x4AAwADAAMAAAD+/x0AAwACAAIAAAD+/x4AAwACAAMAAAD//x0AAwADAAIAAAD//x4AAwADAAMAAAAAAB0AAwACAAIAAAAAAB4AAwACAAMAAAABAB0AAwADAAIAAAABAB4AAwADAAMAAAACAB0AAwACAAIAAAACAB4AAwACAAMAAAADAB0AAwADAAIAAAADAB4AAwADAAMAAAAEAB0AAwACAAIAAAAEAB4AAwACAAMAAAAFAB0AAwADAAIAAAAFAB4AAwADAAMAAAAGAB0AAwACAAIAAAAGAB4AAwACAAMAAAAHAB0AAwADAAIAAAAHAB4AAwADAAMAAAAIAB0AAwACAAIAAAAIAB4AAwACAAMAAAAJAB0AAwADAAIAAAAJAB4AAwADAAMAAAAKAB0AAwACAAIAAAAKAB4AAwACAAMAAAALAB0AAwADAAIAAAALAB4AAwADAAMAAAAMAB0AAwACAAIAAAAMAB4AAwACAAMAAAANAB0AAwADAAIAAAANAB4AAwADAAMAAAAOAB0AAwACAAIAAAAOAB4AAwACAAMAAAAPAB0AAwADAAIAAAAPAB4AAwADAAMAAAAQAB0AAwACAAIAAAAQAB4AAwACAAMAAAARAB0AAwADAAIAAAARAB4AAwADAAMAAAASAB0AAwACAAIAAAASAB4AAwACAAMAAAATAB0AAwADAAIAAAATAB4AAwADAAMAAAAUAB0AAwACAAIAAAAUAB4AAwACAAMAAAAVAB0AAwADAAIAAAAVAB4AAwADAAMAAAAUABsAAwACAAIAAAAUABwAAwACAAMAAAAVABsAAwACAAMAAAAVABwAAwADAAMAAAASABsAAwACAAIAAAASABwAAwACAAMAAAATABsAAwADAAIAAAATABwAAwADAAMAAAAQABsAAwACAAIAAAAQABwAAwACAAMAAAARABsAAwADAAIAAAARABwAAwADAAMAAAAOABsAAwACAAIAAAAOABwAAwACAAMAAAAPABsAAwADAAIAAAAPABwAAwADAAMAAAAMABsAAwACAAIAAAAMABwAAwACAAMAAAANABsAAwADAAIAAAANABwAAwADAAMAAAAKABsAAwACAAIAAAAKABwAAwACAAMAAAALABsAAwADAAIAAAALABwAAwADAAMAAAAIABsAAwACAAIAAAAIABwAAwACAAMAAAAJABsAAwADAAIAAAAJABwAAwADAAMAAAAGABsAAwACAAIAAAAGABwAAwACAAMAAAAHABsAAwADAAIAAAAHABwAAwADAAMAAAAEABsAAwACAAIAAAAEABwAAwACAAMAAAAFABsAAwADAAIAAAAFABwAAwADAAMAAAACABsAAwACAAIAAAACABwAAwACAAMAAAADABsAAwADAAIAAAADABwAAwADAAMAAAAAABsAAwACAAIAAAAAABwAAwACAAMAAAABABsAAwADAAIAAAABABwAAwADAAMAAAD+/xsAAwAJACEAAAD+/xwAAwACAAMAAAD//xsAAwAKACEAAAD//xwAAwADAAMAAAAOAAUAAwAnAAUAAAAOAAYAAwAnAAYAAAAOAAcAAwAnAAcAAAAPAAUAAwAoAAUAAAAPAAYAAwAoAAYAAAAPAAcAAwAoAAcAAAAQAAgAAwAkAAYAAAAQAAkAAwAkAAcAAAARAAgAAwAlAAYAAAARAAkAAwAlAAcAAAAVABUAAwARABcAAAAVABYAAwARABgAAAATAA4AAwAhAA8AAAAUAA4AAwAiAA8AAAAVAA4AAwAnAA8AAAAVAA8AAwAnABAAAAAWAA4AAwAoAA8AAAAWAA8AAwAoABAAAAAXAA8AAwAeAAYAAAAXAA4AAwAkAAsAAAAXAA0AAwAkAAoAAAAYAA0AAwAlAAoAAAAYAA4AAwAlAAsAAAAYAA8AAwAlAAwAAAAYAAwAAwAlAAkAAAAXABAAAwAiAAYAAAAXABEAAwAiAAcAAAAYABAAAwAaAAYAAAAYABEAAwAaAAcAAAAZABAAAwAbAAYAAAAZABEAAwAbAAcAAAAaABEAAwAKAAgAAAAaABAAAwAMAAYAAAAbAA8AAwAWAAYAAAAbABAAAwAWAAcAAAAbABEAAwAWAAgAAAAcAA8AAwARAAYAAAAcABAAAwARAAcAAAAZAA4AAwAkAAwAAAAaAA4AAwAlAAwAAAAbAA4AAwAWAAQAAAAZAA8AAwARAAMAAAAaAA8AAwASAAMAAAACAAEAAwAXAAEAAAACAAIAAwAXAAIAAAADAAEAAwAYAAEAAAADAAIAAwAYAAIAAAAEAAEAAwAZAAEAAAAEAAIAAwAZAAIAAAD+/wUAAwAOAAQAAAD//wUAAwAPAAQAAAASAAcAAwACAAUAAAASAAgAAwACAAYAAAASAAkAAwACAAcAAAATAAcAAwADAAUAAAATAAgAAwADAAYAAAATAAkAAwADAAcAAAAUAAcAAwAIAAYAAAAUAAgAAwAIAAcAAAAVAAYAAwAKAAgAAAAUAAYAAwAMAAYAAAAQAAcAAwAeAAgAAAAQAAUAAwAUAAEAAAAQAAYAAwAUAAIAAAARAAUAAwAVAAEAAAARAAYAAwAVAAIAAAASAAYAAwAeAAQAAAARAAcAAwACAAIAAAASAAUAAwACAAIAAAATAAUAAwACAAIAAAATAAYAAwACAAIAAAAUAAUAAwACAAIAAAAKAAQAAwACAAIAAAALAAQAAwACAAIAAAAMAAQAAwACAAIAAAANAAQAAwACAAIAAAAOAAQAAwACAAIAAAAPAAQAAwACAAIAAAAQAAQAAwACAAIAAAARAAQAAwACAAIAAAASAAQAAwACAAIAAAATAAQAAwACAAIAAAAUAAQAAwACAAIAAAAUAAMAAwACAAIAAAAUAAIAAwACAAIAAAATAAIAAwACAAIAAAASAAIAAwACAAIAAAARAAIAAwACAAIAAAAQAAIAAwACAAIAAAAPAAIAAwACAAIAAAAOAAIAAwACAAIAAAANAAIAAwACAAIAAAAMAAIAAwACAAIAAAALAAIAAwACAAIAAAAKAAIAAwACAAIAAAAJAAIAAwACAAIAAAAIAAEAAwACAAIAAAAHAAEAAwACAAIAAAAHAAIAAwACAAIAAAAGAAIAAwACAAIAAAAFAAIAAwACAAIAAAAFAAEAAwACAAIAAAAGAAEAAwACAAIAAAAIAAIAAwACAAIAAAAIAAMAAwACAAIAAAAHAAMAAwACAAIAAAAGAAMAAwACAAIAAAAFAAMAAwACAAIAAAAEAAMAAwACAAIAAAAJAAMAAwACAAIAAAAKAAMAAwACAAIAAAALAAMAAwACAAIAAAAMAAMAAwACAAIAAAANAAMAAwACAAIAAAAOAAMAAwACAAIAAAAPAAMAAwACAAIAAAAQAAMAAwACAAIAAAARAAMAAwACAAIAAAASAAMAAwACAAIAAAATAAMAAwACAAIAAAADAAMAAwACAAIAAAACAAMAAwACAAIAAAABAAMAAwACAAIAAAAAAAMAAwACAAIAAAD//wMAAwACAAIAAAD+/wMAAwACAAIAAAD9/wMAAwACAAIAAAD8/wMAAwACAAIAAAD7/wQAAwACAAIAAAD7/wUAAwACAAIAAAD7/wcAAwACAAIAAAD7/wYAAwACAAIAAAD7/wMAAwACAAIAAAD7/wIAAwACAAIAAAD7/wEAAwACAAIAAAD7/wAAAwACAAIAAAD8/wAAAwACAAIAAAD9/wAAAwACAAIAAAD+/wAAAwACAAIAAAD//wAAAwACAAIAAAAAAAAAAwACAAIAAAABAAAAAwACAAIAAAACAAAAAwACAAIAAAADAAAAAwACAAIAAAAEAAAAAwACAAIAAAAFAAAAAwACAAIAAAAGAAAAAwACAAIAAAAHAAAAAwACAAIAAAAIAAAAAwACAAIAAAAJAAAAAwADAAIAAAAAAAEAAwACAAIAAAABAAEAAwACAAIAAAABAAIAAwACAAIAAAAAAAIAAwACAAIAAAD//wEAAwACAAIAAAD+/wEAAwACAAIAAAD9/wEAAwACAAIAAAD9/wIAAwACAAIAAAD8/wIAAwACAAIAAAD8/wEAAwACAAIAAAD+/wIAAwACAAIAAAD//wIAAwACAAIAAAAAAAQAAwACAAIAAAD//wQAAwACAAIAAAD+/wQAAwACAAIAAAD9/wQAAwACAAIAAAD8/wQAAwACAAIAAAD8/wUAAwACAAIAAAD8/wYAAwACAAIAAAD9/wUAAwACAAIAAAD8/wcAAwACAAIAAAD7/xAAAwACAAIAAAD7/xEAAwACAAIAAAD7/xIAAwACAAIAAAD7/xMAAwACAAIAAAD7/xQAAwACAAIAAAD7/xUAAwACAAIAAAD7/xYAAwACAAIAAAD7/x0AAwACAAIAAAD7/x4AAwACAAIAAAD7/xwAAwACAAIAAAD7/xsAAwACAAIAAAD7/xoAAwACAAIAAAD7/xkAAwACAAIAAAD7/xcAAwACAAIAAAD7/xgAAwACAAIAAAAGABIAAwADAAIAAAAWABUAAwAFAAoAAAAWABYAAwAFAAsAAAAWABcAAwAFAAwAAAAXABUAAwAGAAoAAAAXABYAAwAGAAsAAAAXABcAAwAGAAwAAAAWABQAAwAFAAkAAAAYABUAAwAFAAkAAAAYABYAAwAFAAoAAAAYABcAAwAFAAsAAAAYABgAAwAFAAwAAAAZABYAAwAGAAoAAAAZABcAAwAGAAsAAAAZABgAAwAGAAwAAAAaABYAAwARABYAAAAaABcAAwARABcAAAAaABgAAwARABgAAAAbABYAAwARABYAAAAbABcAAwARABcAAAAbABgAAwARABgAAAAcABYAAwAVABYAAAAcABcAAwAVABcAAAAcABgAAwAVABgAAAAdABYAAwAWABYAAAAdABcAAwAWABcAAAAdABgAAwAWABgAAAAgABYAAwAYABYAAAAgABcAAwAYABcAAAAgABgAAwAYABgAAAAhABYAAwAZABYAAAAhABcAAwAZABcAAAAhABgAAwAZABgAAAAeABYAAwAOABYAAAAeABcAAwAOABcAAAAeABgAAwAOABgAAAAfABYAAwAPABYAAAAfABcAAwAPABcAAAAfABgAAwAPABgAAAAVABcAAwACAAMAAAAhABkAAwACAAMAAAAhABoAAwACAAMAAAAhABsAAwACAAMAAAAhABwAAwACAAMAAAAhAB0AAwACAAMAAAAhAB4AAwACAAMAAAAgAB4AAwACAAMAAAAfAB4AAwACAAMAAAAeAB4AAwACAAMAAAAdAB4AAwACAAMAAAAcAB4AAwACAAMAAAAbAB4AAwACAAMAAAAaAB4AAwACAAMAAAAZAB4AAwACAAMAAAAYAB4AAwACAAMAAAAXAB4AAwACAAMAAAAWAB4AAwACAAMAAAAWAB0AAwACAAMAAAAWABwAAwACAAMAAAAWABsAAwACAAMAAAAWABkAAwASAB8AAAAWABgAAwACAAMAAAAXABgAAwACAAMAAAAXABkAAwACAAMAAAAWABoAAwASACAAAAAXABoAAwACAAMAAAAXABsAAwACAAMAAAAXABwAAwACAAMAAAAXAB0AAwACAAMAAAAYAB0AAwACAAMAAAAZAB0AAwACAAMAAAAaAB0AAwACAAMAAAAbAB0AAwASAB0AAAAcAB0AAwACAAMAAAAdABwAAwAYACAAAAAeABwAAwACAAMAAAAfABwAAwAPAB0AAAAgABwAAwAQAB0AAAAgAB0AAwACAAMAAAAfAB0AAwACAAMAAAAeAB0AAwACAAMAAAAdAB0AAwACAAMAAAAeABsAAwACAAMAAAAfABsAAwAPABwAAAAgABsAAwAQABwAAAAgABoAAwACAAMAAAAgABkAAwACAAMAAAAfABkAAwACAAMAAAAeABkAAwACAAMAAAAdABkAAwACAAMAAAAcABkAAwACAAMAAAAbABkAAwACAAMAAAAaABkAAwACAAMAAAAaABoAAwACAAMAAAAZABoAAwACAAMAAAAZABkAAwACAAMAAAAYABkAAwACAAMAAAAYABoAAwACAAMAAAAYABsAAwACAAMAAAAYABwAAwACAAMAAAAZABwAAwACAAMAAAAaABsAAwACAAMAAAAbABsAAwACAAMAAAAZABsAAwACAAMAAAAcABsAAwACAAMAAAAcABwAAwACAAMAAAAbABwAAwASABwAAAAaABwAAwACAAMAAAAdABsAAwAYAB8AAAAeABoAAwACAAMAAAAdABoAAwACAAMAAAAcABoAAwACAAMAAAAbABoAAwACAAMAAAAfABoAAwACAAMAAAAZAAwAAwAkAAoAAAAZAA0AAwAkAAsAAAAaAAsAAwAlAAkAAAAaAAwAAwAlAAoAAAAaAA0AAwAlAAsAAAAbAAsAAwAbABYAAAAbAAwAAwAbABcAAAAbAA0AAwAbABgAAAAcAAsAAwAcABYAAAAcAAwAAwAcABcAAAAcAA0AAwAcABgAAAAfAAsAAwAZABYAAAAgAAsAAwAZABYAAAAeAAsAAwAYABYAAAAeAAwAAwAYABcAAAAeAA0AAwAYABgAAAAfAAwAAwAZABcAAAAfAA0AAwAZABgAAAAdAAsAAwARABYAAAAdAAwAAwARABcAAAAdAA0AAwARABgAAAAgAAwAAwATABcAAAAgAA0AAwATABgAAAAhAAsAAwAOABYAAAAhAAwAAwAOABcAAAAhAA0AAwAOABgAAAAiAAsAAwAPABYAAAAiAAwAAwAPABcAAAAiAA0AAwAPABgAAAAdAA8AAwAaAAYAAAAdABAAAwAaAAcAAAAeAA8AAwAbAAYAAAAeABAAAwAbAAcAAAAfAA8AAwAOAAYAAAAfABAAAwAOAAcAAAAfABEAAwAOAAgAAAAgAA8AAwAPAAYAAAAgABAAAwAPAAcAAAAgABEAAwAPAAgAAAAcAA4AAwAUAAQAAAAdAA4AAwAVAAQAAAAeAA4AAwAWAAQAAAAfAA4AAwAbAAQAAAAgAA4AAwAcAAQAAAAhABAAAwAKAAgAAAAhAA8AAwAMAAgAAAAiAA4AAwAYAAYAAAAiAA8AAwAYAAcAAAAjAA4AAwATAAYAAAAjAA8AAwATAAcAAAAkAA4AAwAUAAYAAAAkAA8AAwAUAAcAAAAhAA4AAwACAAIAAAAlAAsAAwAQAAoAAAAlAAwAAwAQAAsAAAAlAA0AAwAQAAwAAAAmAAwAAwARAAsAAAAmAA0AAwARAAwAAAAlAA4AAwAFAAYAAAAlAA8AAwAFAAcAAAAmAA4AAwAGAAYAAAAmAA8AAwAGAAcAAAAjAAsAAwAbABYAAAAjAAwAAwAbABcAAAAjAA0AAwAbABgAAAAkAAsAAwAcABYAAAAkAAwAAwAcABcAAAAkAA0AAwAcABgAAAAWAAQAAwAOAAYAAAAWAAUAAwAOAAcAAAAWAAYAAwAOAAgAAAAXAAQAAwAPAAYAAAAXAAUAAwAPAAcAAAAXAAYAAwAPAAgAAAAVAAUAAwAMAAYAAAAYAAQAAwARAAYAAAAYAAUAAwARAAcAAAAZAAQAAwATAAYAAAAZAAUAAwATAAcAAAAaAAQAAwAUAAYAAAAaAAUAAwAUAAcAAAAbAAQAAwAWAAYAAAAbAAUAAwAWAAcAAAAbAAYAAwAWAAgAAAAcAAQAAwAaAAYAAAAcAAUAAwAaAAcAAAAdAAQAAwAbAAYAAAAdAAUAAwAbAAcAAAAeAAQAAwAOAAYAAAAeAAUAAwAOAAcAAAAeAAYAAwAOAAgAAAAfAAQAAwAPAAYAAAAfAAUAAwAPAAcAAAAfAAYAAwAPAAgAAAAJAAEAAwADAAIAAAAKAAEAAwADAAIAAAALAAEAAwADAAIAAAAMAAEAAwADAAIAAAANAAEAAwADAAIAAAAOAAEAAwADAAIAAAAPAAEAAwADAAIAAAAQAAEAAwADAAIAAAARAAEAAwADAAIAAAASAAEAAwADAAIAAAATAAEAAwADAAIAAAAUAAEAAwADAAIAAAAVAAEAAwADAAIAAAAWAAEAAwADAAIAAAAXAAEAAwADAAIAAAAYAAEAAwADAAIAAAAZAAEAAwADAAIAAAAaAAEAAwADAAIAAAAbAAEAAwADAAIAAAAcAAEAAwADAAIAAAAdAAEAAwADAAIAAAAeAAEAAwADAAIAAAAfAAEAAwADAAIAAAAfAAIAAwACAAIAAAAfAAMAAwACAAMAAAAeAAMAAwADAAIAAAAdAAMAAwADAAIAAAAcAAMAAwADAAIAAAAbAAMAAwADAAIAAAAaAAMAAwADAAIAAAAZAAMAAwADAAIAAAAYAAMAAwADAAIAAAAXAAMAAwADAAIAAAAWAAMAAwADAAIAAAAVAAMAAwADAAIAAAAVAAQAAwADAAIAAAAVAAIAAwADAAIAAAAWAAIAAwADAAIAAAAXAAIAAwADAAIAAAAYAAIAAwADAAIAAAAZAAIAAwADAAIAAAAaAAIAAwADAAIAAAAbAAIAAwADAAIAAAAcAAIAAwADAAIAAAAdAAIAAwADAAIAAAAeAAIAAwADAAIAAAAeAAAAAwADAAIAAAAfAAAAAwADAAIAAAAdAAAAAwADAAIAAAAcAAAAAwADAAIAAAAbAAAAAwADAAIAAAAaAAAAAwADAAIAAAAZAAAAAwADAAIAAAAYAAAAAwADAAIAAAAXAAAAAwADAAIAAAAWAAAAAwADAAIAAAAVAAAAAwADAAIAAAAUAAAAAwADAAIAAAATAAAAAwADAAIAAAASAAAAAwADAAIAAAARAAAAAwADAAIAAAAQAAAAAwADAAIAAAAPAAAAAwADAAIAAAAOAAAAAwADAAIAAAANAAAAAwADAAIAAAAMAAAAAwADAAIAAAALAAAAAwADAAIAAAAKAAAAAwADAAIAAAAiABYAAwAVABYAAAAiABcAAwAVABcAAAAiABgAAwAVABgAAAAjABYAAwAWABYAAAAjABcAAwAWABcAAAAjABgAAwAWABgAAAAkABYAAwARABYAAAAkABcAAwARABcAAAAkABgAAwARABgAAAAlABcAAwATABcAAAAlABgAAwATABgAAAAmABYAAwAOABYAAAAmABcAAwAOABcAAAAmABgAAwAOABgAAAAnABYAAwAPABYAAAAnABcAAwAPABcAAAAnABgAAwAPABgAAAAoABYAAwAbABYAAAAoABcAAwAbABcAAAAoABgAAwAbABgAAAApABYAAwAcABYAAAApABcAAwAcABcAAAApABgAAwAcABgAAAAqABYAAwARABYAAAAqABcAAwARABcAAAAqABgAAwARABgAAAArABYAAwARABYAAAArABcAAwARABcAAAArABgAAwARABgAAAAsABYAAwAVABYAAAAsABcAAwAVABcAAAAsABgAAwAVABgAAAAtABYAAwAWABYAAAAtABcAAwAWABcAAAAtABgAAwAWABgAAAAuABYAAwAYABYAAAAuABcAAwAYABcAAAAuABgAAwAYABgAAAAvABYAAwAZABYAAAAvABcAAwAZABcAAAAvABgAAwAZABgAAAAwABcAAwATABcAAAAwABgAAwATABgAAAAxABYAAwARABYAAAAxABcAAwARABcAAAAxABgAAwARABgAAAAiABkAAwACAAIAAAAiABoAAwACAAMAAAAjABkAAwADAAIAAAAjABoAAwADAAMAAAAiABsAAwACAAIAAAAiABwAAwACAAMAAAAjABsAAwADAAIAAAAjABwAAwADAAMAAAAiAB0AAwACAAIAAAAiAB4AAwACAAMAAAAjAB0AAwADAAIAAAAjAB4AAwADAAMAAAAkAB0AAwASACAAAAAkAB4AAwACAAMAAAAlAB0AAwADAAIAAAAlAB4AAwADAAMAAAAmAB0AAwACAAIAAAAmAB4AAwACAAMAAAAnAB0AAwADAAIAAAAnAB4AAwADAAMAAAAoAB0AAwACAAIAAAAoAB4AAwACAAMAAAApAB0AAwADAAIAAAApAB4AAwADAAMAAAAqAB0AAwACAAIAAAAqAB4AAwACAAMAAAArAB0AAwADAAIAAAArAB4AAwADAAMAAAAsAB0AAwACAAIAAAAsAB4AAwACAAMAAAAtAB0AAwADAAIAAAAtAB4AAwADAAMAAAAuAB0AAwACAAIAAAAuAB4AAwACAAMAAAAvAB0AAwADAAIAAAAvAB4AAwADAAMAAAAwAB0AAwACAAIAAAAwAB4AAwACAAMAAAAxAB0AAwACAAIAAAAxAB4AAwACAAMAAAAwABsAAwAKACAAAAAwABwAAwAKACEAAAAxABsAAwADAAIAAAAxABwAAwADAAMAAAAwABkAAwACAAIAAAAwABoAAwAKAB8AAAAxABkAAwADAAIAAAAxABoAAwADAAMAAAAuABkAAwACAAIAAAAuABoAAwAIAB8AAAAvABkAAwADAAIAAAAvABoAAwAJAB8AAAAsABkAAwACAAIAAAAsABoAAwACAAMAAAAtABkAAwADAAIAAAAtABoAAwADAAMAAAAqABkAAwACAAIAAAAqABoAAwACAAMAAAArABkAAwADAAIAAAArABoAAwADAAMAAAAoABkAAwACAAIAAAAoABoAAwAeACEAAAApABkAAwADAAIAAAApABoAAwADAAMAAAAmABkAAwACAAIAAAAmABoAAwACAAMAAAAnABkAAwADAAIAAAAnABoAAwADAAMAAAAkABkAAwACAAIAAAAkABoAAwACAAMAAAAlABkAAwADAAIAAAAlABoAAwADAAMAAAAkABsAAwACAAIAAAAkABwAAwASAB8AAAAlABsAAwADAAIAAAAlABwAAwADAAMAAAAmABsAAwACAAIAAAAmABwAAwACAAMAAAAnABsAAwADAAIAAAAnABwAAwADAAMAAAAoABsAAwACAAIAAAAoABwAAwACAAMAAAApABsAAwADAAIAAAApABwAAwADAAMAAAAqABsAAwACAAIAAAAqABwAAwACAAMAAAArABsAAwAUABwAAAArABwAAwAUAB0AAAAsABsAAwACAAIAAAAsABwAAwACAAMAAAAtABsAAwADAAIAAAAtABwAAwADAAMAAAAuABsAAwAIACAAAAAuABwAAwAIACEAAAAvABsAAwAJACAAAAAvABwAAwAJACEAAAAyABcAAwAeABcAAAAyABgAAwAeABgAAAAyABUAAwAZAAwAAAAyABYAAwAdABIAAAAzABUAAwAaAAwAAAAzABYAAwAeABIAAAAyABQAAwAZAAsAAAAzABQAAwAaAAsAAAAzABMAAwAaAAoAAAA0ABMAAwAYABYAAAA0ABQAAwAYABcAAAA0ABUAAwAYABgAAAA1ABMAAwAZABYAAAA1ABQAAwAZABcAAAA1ABUAAwAZABgAAAA2ABMAAwAVABYAAAA2ABQAAwAVABcAAAA2ABUAAwAVABgAAAA3ABMAAwAWABYAAAA3ABQAAwAWABcAAAA3ABUAAwAWABgAAAA4ABQAAwATABcAAAA4ABUAAwATABgAAAA8ABQAAwAeABcAAAA8ABUAAwAeABgAAAA5ABMAAwAOABYAAAA5ABQAAwAOABcAAAA5ABUAAwAOABgAAAA6ABMAAwAPABYAAAA6ABQAAwAPABcAAAA6ABUAAwAPABgAAAA7ABMAAwARABYAAAA7ABQAAwARABcAAAA7ABUAAwARABgAAAA8ABIAAwAeABQAAAA8ABMAAwAeABUAAAA8ABEAAwAaABIAAAA9ABEAAwAbABIAAAA8ABAAAwAdABIAAAA9ABAAAwAeABIAAAA8AA4AAwAbABUAAAA9AA4AAwAcABUAAAA8AA8AAwAXABIAAAA9AA8AAwAYABIAAAA8AA0AAwAbABQAAAA9AA0AAwAcABQAAAA8AAwAAwAeAAYAAAA6AAsAAwAaAAYAAAA6AAwAAwAaAAcAAAA7AAsAAwAbAAYAAAA7AAwAAwAbAAcAAAA5AAsAAwAYAAYAAAA5AAwAAwAYAAcAAAA4AAsAAwAWAAYAAAA4AAwAAwAWAAcAAAA4AA0AAwAWAAgAAAA2AAsAAwATAAYAAAA2AAwAAwATAAcAAAA3AAsAAwAUAAYAAAA3AAwAAwAUAAcAAAA1AAsAAwAiAAYAAAA1AAwAAwAiAAcAAAA7ABYAAwADAAIAAAA7ABcAAwADAAMAAAA8ABYAAwADAAIAAAA8ABcAAwADAAMAAAA7ABgAAwADAAIAAAA7ABkAAwADAAMAAAA8ABgAAwADAAIAAAA8ABkAAwADAAMAAAA7ABoAAwADAAIAAAA7ABsAAwADAAMAAAA8ABoAAwADAAIAAAA8ABsAAwADAAMAAAA7ABwAAwADAAIAAAA7AB0AAwADAAMAAAA8ABwAAwADAAIAAAA8AB0AAwADAAIAAAA7AB4AAwACAAMAAAA8AB4AAwADAAMAAAA5AB0AAwADAAMAAAA5AB4AAwACAAMAAAA6AB0AAwACAAMAAAA6AB4AAwADAAMAAAA3AB0AAwADAAMAAAA3AB4AAwACAAMAAAA4AB0AAwACAAMAAAA4AB4AAwADAAMAAAA1AB0AAwADAAMAAAA1AB4AAwACAAMAAAA2AB0AAwACAAMAAAA2AB4AAwADAAMAAAAzAB0AAwACAAIAAAAzAB4AAwACAAMAAAA0AB0AAwACAAMAAAA0AB4AAwADAAMAAAAyAB0AAwADAAIAAAAyAB4AAwADAAMAAAAyABsAAwACAAIAAAAyABwAAwACAAMAAAAzABsAAwADAAIAAAAzABwAAwADAAMAAAAyABkAAwACAAIAAAAyABoAAwACAAMAAAAzABkAAwADAAIAAAAzABoAAwADAAMAAAAzABcAAwACAAIAAAAzABgAAwACAAMAAAA0ABcAAwACAAMAAAA0ABgAAwACAAIAAAA0ABYAAwACAAIAAAA1ABYAAwADAAIAAAA1ABcAAwADAAMAAAA2ABYAAwACAAIAAAA2ABcAAwACAAMAAAA3ABYAAwADAAIAAAA3ABcAAwADAAMAAAA4ABYAAwACAAIAAAA4ABcAAwACAAMAAAA5ABYAAwADAAIAAAA5ABcAAwADAAMAAAA4ABgAAwACAAIAAAA4ABkAAwACAAMAAAA5ABgAAwADAAIAAAA5ABkAAwADAAMAAAA4ABoAAwACAAIAAAA4ABsAAwACAAMAAAA5ABoAAwADAAIAAAA5ABsAAwADAAMAAAA4ABwAAwACAAIAAAA5ABwAAwADAAIAAAA2ABwAAwACAAIAAAA3ABwAAwADAAIAAAA2ABoAAwACAAIAAAA2ABsAAwACAAMAAAA3ABoAAwADAAIAAAA3ABsAAwADAAMAAAA0ABoAAwACAAIAAAA0ABsAAwACAAMAAAA1ABoAAwADAAIAAAA1ABsAAwADAAMAAAA0ABwAAwACAAIAAAA1ABwAAwADAAIAAAA0ABkAAwACAAMAAAA1ABgAAwADAAIAAAA1ABkAAwADAAMAAAA2ABgAAwACAAIAAAA2ABkAAwACAAMAAAA3ABgAAwADAAIAAAA3ABkAAwADAAMAAAA6ABgAAwACAAIAAAA6ABkAAwACAAMAAAA6ABYAAwACAAIAAAA6ABcAAwACAAMAAAA6ABoAAwACAAIAAAA6ABsAAwACAAMAAAA6ABwAAwACAAIAAAA9ABIAAwACAAIAAAA9ABMAAwACAAMAAAA+ABIAAwACAAMAAAA+ABMAAwACAAIAAAA9ABQAAwACAAIAAAA9ABUAAwACAAMAAAA+ABQAAwACAAMAAAA+ABUAAwACAAIAAAA9ABYAAwACAAIAAAA9ABcAAwACAAMAAAA+ABYAAwACAAMAAAA+ABcAAwACAAIAAAA9ABgAAwACAAIAAAA9ABkAAwACAAMAAAA+ABgAAwACAAMAAAA+ABkAAwACAAIAAAA9ABoAAwACAAIAAAA9ABsAAwACAAMAAAA+ABoAAwACAAMAAAA+ABsAAwACAAIAAAA9ABwAAwACAAIAAAA9AB0AAwACAAMAAAA+ABwAAwACAAMAAAA+AB0AAwACAAIAAAA9AB4AAwACAAIAAAA+AB4AAwACAAMAAAA/AB0AAwADAAIAAAA/AB4AAwADAAMAAAA/ABsAAwADAAIAAAA/ABwAAwADAAMAAAA/ABkAAwADAAIAAAA/ABoAAwADAAMAAAA/ABcAAwADAAIAAAA/ABgAAwADAAMAAAA/ABUAAwADAAIAAAA/ABYAAwADAAMAAAA/ABMAAwADAAIAAAA/ABQAAwADAAMAAAA+ABEAAwACAAIAAAA/ABEAAwADAAIAAAA/ABIAAwADAAMAAAA+AA8AAwACAAMAAAA+ABAAAwACAAMAAAA/AA8AAwADAAMAAAA/ABAAAwADAAMAAAA+AA4AAwACAAIAAAA/AA4AAwADAAIAAAA+AAwAAwADAAMAAAA+AA0AAwACAAMAAAA/AAwAAwADAAIAAAA/AA0AAwADAAMAAAA+AAoAAwACAAIAAAA+AAsAAwADAAIAAAA/AAoAAwADAAIAAAA/AAsAAwADAAMAAAA+AAgAAwACAAIAAAA+AAkAAwACAAMAAAA/AAgAAwADAAIAAAA/AAkAAwADAAMAAAA+AAYAAwACAAIAAAA+AAcAAwACAAMAAAA/AAYAAwADAAIAAAA/AAcAAwADAAMAAAA+AAQAAwACAAIAAAA+AAUAAwACAAMAAAA/AAQAAwADAAIAAAA/AAUAAwADAAMAAAA+AAIAAwADAAIAAAA+AAMAAwADAAMAAAA/AAIAAwADAAIAAAA/AAMAAwADAAMAAAAgAAAAAwACAAIAAAAgAAEAAwACAAMAAAAhAAAAAwADAAIAAAAhAAEAAwADAAMAAAAiAAAAAwACAAIAAAAiAAEAAwACAAMAAAAjAAAAAwADAAIAAAAjAAEAAwADAAMAAAAkAAAAAwACAAIAAAAkAAEAAwACAAMAAAAlAAAAAwADAAIAAAAlAAEAAwADAAMAAAAmAAAAAwACAAIAAAAmAAEAAwACAAMAAAAnAAAAAwADAAIAAAAnAAEAAwADAAMAAAAoAAAAAwACAAIAAAAoAAEAAwACAAMAAAApAAAAAwADAAIAAAApAAEAAwADAAMAAAAqAAAAAwACAAIAAAAqAAEAAwACAAMAAAArAAAAAwADAAIAAAArAAEAAwADAAMAAAAsAAAAAwACAAIAAAAsAAEAAwACAAMAAAAtAAAAAwADAAIAAAAtAAEAAwADAAMAAAAuAAAAAwACAAIAAAAuAAEAAwACAAMAAAAvAAAAAwADAAIAAAAvAAEAAwADAAMAAAAwAAAAAwACAAIAAAAwAAEAAwACAAMAAAAxAAAAAwADAAIAAAAxAAEAAwADAAMAAAAyAAAAAwACAAIAAAAyAAEAAwACAAMAAAAzAAAAAwADAAIAAAAzAAEAAwADAAMAAAA0AAAAAwACAAIAAAA0AAEAAwACAAMAAAA1AAAAAwADAAIAAAA1AAEAAwADAAMAAAA2AAAAAwACAAIAAAA2AAEAAwACAAMAAAA3AAAAAwADAAIAAAA3AAEAAwADAAMAAAA4AAAAAwACAAIAAAA4AAEAAwACAAMAAAA5AAAAAwADAAIAAAA5AAEAAwADAAMAAAA6AAAAAwACAAIAAAA6AAEAAwACAAMAAAA7AAAAAwADAAIAAAA7AAEAAwADAAMAAAA8AAAAAwACAAIAAAA8AAEAAwACAAMAAAA9AAAAAwADAAIAAAA9AAEAAwADAAMAAAA+AAAAAwACAAIAAAA+AAEAAwACAAMAAAA/AAAAAwADAAIAAAA/AAEAAwADAAMAAAA9AAIAAwACAAIAAAA9AAMAAwACAAMAAAA7AAIAAwACAAIAAAA7AAMAAwACAAMAAAA8AAIAAwADAAIAAAA8AAMAAwADAAMAAAA5AAIAAwACAAIAAAA5AAMAAwACAAMAAAA6AAIAAwADAAIAAAA6AAMAAwADAAMAAAA3AAIAAwACAAIAAAA3AAMAAwADAAIAAAA4AAIAAwADAAIAAAA4AAMAAwADAAMAAAA1AAIAAwACAAIAAAA1AAMAAwADAAIAAAA2AAIAAwADAAIAAAA2AAMAAwACAAIAAAAzAAIAAwACAAIAAAAzAAMAAwADAAIAAAA0AAIAAwADAAIAAAA0AAMAAwACAAIAAAAxAAIAAwACAAIAAAAxAAMAAwADAAIAAAAyAAIAAwADAAIAAAAyAAMAAwACAAIAAAAvAAIAAwACAAIAAAAvAAMAAwADAAIAAAAwAAIAAwADAAIAAAAwAAMAAwACAAIAAAAtAAIAAwACAAIAAAAtAAMAAwADAAIAAAAuAAIAAwADAAIAAAAuAAMAAwACAAIAAAArAAIAAwACAAIAAAArAAMAAwADAAIAAAAsAAIAAwADAAIAAAAsAAMAAwACAAIAAAApAAIAAwACAAIAAAApAAMAAwACAAMAAAAqAAIAAwADAAIAAAAqAAMAAwACAAIAAAAnAAIAAwACAAIAAAAnAAMAAwACAAMAAAAoAAIAAwADAAIAAAAoAAMAAwADAAMAAAAlAAIAAwACAAIAAAAlAAMAAwACAAMAAAAmAAIAAwADAAIAAAAmAAMAAwADAAMAAAAjAAIAAwACAAIAAAAjAAMAAwACAAMAAAAkAAIAAwADAAIAAAAkAAMAAwADAAMAAAAhAAIAAwACAAIAAAAhAAMAAwACAAMAAAAiAAIAAwADAAIAAAAiAAMAAwADAAMAAAAgAAIAAwADAAIAAAAgAAMAAwADAAMAAAAzAAgAAwAnAAUAAAAzAAkAAwAnAAYAAAAzAAoAAwAnAAcAAAA0AAgAAwAoAAUAAAA0AAkAAwAoAAYAAAA0AAoAAwAoAAcAAAA1AAoAAwAeAAYAAAAxAAgAAwAaAAYAAAAxAAkAAwAaAAcAAAAyAAgAAwAbAAYAAAAyAAkAAwAbAAcAAAAwAAkAAwAgAAgAAAAuAAcAAwATAAYAAAAuAAgAAwATAAcAAAAvAAcAAwAUAAYAAAAvAAgAAwAUAAcAAAAwAAgAAwAeAAgAAAAsAAcAAwAOAAYAAAAsAAgAAwAOAAcAAAAsAAkAAwAOAAgAAAAtAAcAAwAPAAYAAAAtAAgAAwAPAAcAAAAtAAkAAwAPAAgAAAAgAAQAAwATAAYAAAAgAAUAAwATAAcAAAAhAAQAAwAUAAYAAAAhAAUAAwAUAAcAAAAiAAQAAwARAAYAAAAiAAUAAwARAAcAAAAjAAQAAwAaAAYAAAAjAAUAAwAaAAcAAAAkAAQAAwAbAAYAAAAkAAUAAwAbAAcAAAAlAAUAAwAYAAcAAAArAAcAAwAiAAYAAAArAAgAAwAiAAcAAAAqAAYAAwAgAAYAAAAqAAcAAwAgAAcAAAArAAYAAwAeAAYAAAAlAAQAAwAYAAYAAAAmAAQAAwAaAAYAAAAmAAUAAwAaAAcAAAAnAAQAAwAbAAYAAAAnAAUAAwAbAAcAAAAoAAQAAwATAAYAAAAoAAUAAwATAAcAAAApAAQAAwAUAAYAAAApAAUAAwAUAAcAAAAqAAUAAwAeAAgAAAAqAAQAAwACAAMAAAArAAQAAwACAAIAAAAsAAQAAwADAAIAAAAtAAQAAwACAAIAAAAuAAQAAwADAAIAAAAvAAQAAwACAAIAAAAwAAQAAwADAAIAAAAxAAQAAwADAAMAAAAyAAQAAwACAAMAAAAzAAQAAwADAAMAAAA0AAQAAwACAAMAAAA1AAQAAwADAAMAAAA2AAQAAwACAAMAAAA3AAQAAwADAAMAAAArAAUAAwACAAMAAAAsAAUAAwACAAIAAAAtAAUAAwADAAIAAAAuAAUAAwACAAIAAAAvAAUAAwADAAIAAAAwAAUAAwACAAIAAAAsAAYAAwACAAMAAAAtAAYAAwADAAMAAAAuAAYAAwACAAMAAAAvAAYAAwADAAMAAAAwAAYAAwACAAIAAAAxAAUAAwADAAIAAAAxAAYAAwADAAIAAAAyAAUAAwACAAIAAAAyAAYAAwACAAIAAAAzAAUAAwADAAIAAAAzAAYAAwADAAIAAAAwAAcAAwACAAMAAAAxAAcAAwADAAMAAAAyAAcAAwACAAMAAAAzAAcAAwADAAMAAAA0AAUAAwACAAIAAAA0AAYAAwACAAIAAAA1AAUAAwADAAIAAAA1AAYAAwADAAIAAAA2AAUAAwACAAIAAAA2AAYAAwACAAIAAAA3AAUAAwADAAIAAAA3AAYAAwADAAIAAAA4AAUAAwACAAMAAAA4AAYAAwACAAIAAAA5AAUAAwADAAMAAAA5AAYAAwADAAIAAAA4AAQAAwACAAIAAAA5AAQAAwADAAIAAAA6AAQAAwACAAIAAAA6AAUAAwACAAMAAAA7AAQAAwADAAIAAAA7AAUAAwADAAMAAAA8AAQAAwACAAIAAAA8AAUAAwACAAMAAAA9AAQAAwADAAIAAAA9AAUAAwADAAMAAAA8AAYAAwACAAIAAAA8AAcAAwACAAMAAAA9AAYAAwADAAIAAAA9AAcAAwADAAMAAAA8AAgAAwACAAIAAAA8AAkAAwACAAIAAAA9AAgAAwADAAIAAAA9AAkAAwADAAIAAAA0AAcAAwACAAMAAAA1AAcAAwADAAMAAAA2AAcAAwACAAMAAAA3AAcAAwADAAMAAAA4AAcAAwACAAMAAAA5AAcAAwADAAMAAAA6AAYAAwACAAIAAAA6AAcAAwACAAMAAAA7AAYAAwADAAIAAAA7AAcAAwADAAMAAAA1AAgAAwACAAIAAAA1AAkAAwACAAMAAAA2AAgAAwADAAIAAAA2AAkAAwACAAIAAAA3AAgAAwACAAIAAAA3AAkAAwADAAIAAAA4AAgAAwADAAIAAAA4AAkAAwACAAIAAAA5AAgAAwACAAIAAAA5AAkAAwADAAIAAAA6AAgAAwACAAIAAAA6AAkAAwACAAIAAAA7AAgAAwADAAIAAAA7AAkAAwADAAIAAAA2AAoAAwACAAMAAAA3AAoAAwADAAMAAAA4AAoAAwACAAMAAAA5AAoAAwADAAMAAAA6AAoAAwACAAMAAAA7AAoAAwADAAMAAAA8AAoAAwACAAIAAAA9AAoAAwADAAIAAAA8AAsAAwACAAMAAAA9AAsAAwACAAIAAAA9AAwAAwACAAMAAAA=")
tile_set = ExtResource("1_r7qys")

[node name="player" parent="." instance=ExtResource("2_hkalp")]
position = Vector2(27, 232)

[node name="Camera2D" parent="player" instance=ExtResource("3_hkalp")]
limit_right = 900

[node name="to_tutorial" type="Area2D" parent="."]
position = Vector2(-49, 255)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="to_tutorial"]
position = Vector2(19, -58)
shape = SubResource("RectangleShape2D_qhf3p")

[node name="to_second_level" type="Area2D" parent="."]
position = Vector2(943, 263)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="to_second_level"]
shape = SubResource("RectangleShape2D_qhf3p")

[connection signal="body_entered" from="to_tutorial" to="." method="_on_to_tutorial_body_entered"]
[connection signal="body_entered" from="to_second_level" to="." method="_on_to_second_level_body_entered"]
